# Haskell-SpectraGen-Executable

./: nmr.cabal
src/: Main.hs
src/Data/: Normalize.hs
src/NMR/: Apodization.hs  Noise.hs  Quantity.hs  Spectrum.hs  Types.hs  Util.hs
